Tue Jun 29 21:11:15 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* ext/stringio/stringio.c (strio_write): add RB_GC_GUARD.

Tue Jun 29 19:39:59 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_method.rb (is_ruby64): check
	  ruby binary is mswin64 or mingw64. [ruby-dev:41756]

Tue Jun 29 14:18:21 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_realpath_internal, realpath_rec): skip UNC share root
	  on DOSISH platforms.
	  http://pc12.2ch.net/test/read.cgi/tech/1272248179/600

Tue Jun 29 11:52:33 2010  Narihiro Nakamura  <authorNari@gmail.com>

	* gc.c (unlink_heap_slot, slot_sweep): unlink heaps_slot of
	  heaps_slot linked list if heaps_slot is empty at slot_sweep.
	  fixed [ruby-dev:41543], [ruby-core:24894].

Tue Jun 29 01:22:08 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/fiddle.h: added FFI type detection to avoid bug in ffi
	  header files. Thanks Yugui! [ruby-core:30917]

Mon Jun 28 22:14:22 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/rdoc/test_rdoc_ri_driver.rb (TestRDocRIDriver#test_formatter):
	  fix a test accordingly to r28455.

Mon Jun 28 21:56:14 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread.c (rb_fd_resize, rb_fd_copy): avoid NULL dereference upon
	  failed realloc by using xrealloc instead of not realloc.  a patch
	  from Jim Meyering <meyering at redhat.com> in [ruby-core:30920]
	  [Bug #3489]

Mon Jun 28 20:32:33 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_method.rb (test_offset_vtbl): check
	  that Ruby is 32bit or 64bit binary in order to get correct offset
	  value. [ruby-dev:41741]

Mon Jun 28 05:32:51 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/rdoc/ri/driver.rb (RDoc::RI::Driver#formatter): should use bs
	  format when stdout is piped.  [ruby-core:30734]

Mon Jun 28 03:12:03 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* bootstraptest/test_class.rb: add a test for [ruby-core:30843].

Mon Jun 28 02:43:35 2010  Yusuke Endoh  <mame@tsg.ne.jp>
